[gd_scene load_steps=3 format=3 uid="uid://bhlbnqxjhlfxi"]

[ext_resource type="Script" path="res://ui/room browser/room_browser_2d.gd" id="1_l77cy"]
[ext_resource type="Texture2D" uid="uid://be10ryxuesjpf" path="res://ui/room browser/rect_grabber.png" id="2_xce5i"]

[node name="RoomBrowser" type="Node2D"]
script = ExtResource("1_l77cy")

[node name="Camera2D" type="Camera2D" parent="."]
ignore_rotation = false
zoom = Vector2(8, 8)

[node name="Rooms" type="Node2D" parent="."]

[node name="OpenTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RectGrabber" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("2_xce5i")

[node name="RapidInputTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RapidInputStartupTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
